fix: delete revoke word and scrollbar X in permissions page. Also new styles to scrollbar

--- a/visor-extension/src/components/perms/perms.css
+++ b/visor-extension/src/components/perms/perms.css
@@ -24,7 +24,21 @@
 
 .permission-request-list {
   height: 225px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.permission-request-list::-webkit-scrollbar {
+  width: 10px;
+}
+ 
+.permission-request-list::-webkit-scrollbar-thumb {
+  background: #3e3e3e;
+  border-radius: 20px;
+}
+
+.permission-request-list::-webkit-scrollbar-track {
+  background: #969494;
+  border-radius: 20px;
 }
 
 .permission-request-list ul {
